stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_test__test_basic_workflow.snap
---
source: crates/stepflow-cli/tests/commands/test_test.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - test
    - tests/basic.yaml
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
----------
Running 2 test cases in batch mode (max_concurrency=10)
tests/basic.yaml: 2/2 passed
tests/basic.yaml: 2/2 passed

=== Test Summary ===
Files tested: 1
Total test cases: 2
Passed: 2
Failed: 0

----- stderr -----
