stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_test__test_help.snap
---
source: crates/stepflow-cli/tests/commands/test_test.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - test
    - "--help"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
Run tests defined in workflow files or directories.

Run test cases defined in workflow files.

# Examples

```bash

# Run all tests in a workflow file

stepflow test examples/basic/workflow.yaml

# Run tests in a directory

stepflow test examples/

# Run specific test case

stepflow test workflow.yaml --case=calculate_with_8_and_5

# Run multiple specific test cases

stepflow test workflow.yaml --case=test1 --case=test2

# Update expected outputs (snapshot testing)

stepflow test workflow.yaml --update

# Show detailed diff on test failures

stepflow test workflow.yaml --diff

```

Usage: stepflow test [OPTIONS] [PATH]...

Arguments:
  [PATH]...
          Paths to workflow files or directories containing tests

Options:
      --config <FILE>
          The path to the stepflow config file.
          
          If not specified, will look for `stepflow-config.yml` in the directory containing the workflow file. If that isn't found, will also look in the current directory.

      --case <NAME>
          Run only specific test case(s) by name. Can be repeated

      --update
          Update expected outputs with actual outputs from test runs

      --diff
          Show diff when tests fail

      --max-concurrency <N>
          Maximum concurrency for batch test execution within each file.
          
          Test cases within a file are executed in a single batch run for efficiency. This option controls how many test cases can execute concurrently.
          
          Default is 10.
          
          [default: 10]

      --omit-stack-trace
          Omit stack traces (line numbers of errors)

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
