stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_test__test_mock_directory.snap
---
source: crates/stepflow-cli/tests/commands/test_test.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - test
    - tests/mock
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
----------
Running 3 test cases in batch mode (max_concurrency=10)
tests/mock/basic.yaml: 3/3 passed
----------
Running 2 test cases in batch mode (max_concurrency=10)
tests/mock/error_fail.yaml: 2/2 passed
----------
Running 2 test cases in batch mode (max_concurrency=10)
tests/mock/error_retry.yaml: 2/2 passed
----------
Running 2 test cases in batch mode (max_concurrency=10)
tests/mock/error_use_default.yaml: 2/2 passed
----------
Running 2 test cases in batch mode (max_concurrency=10)
tests/mock/error_use_default_value.yaml: 2/2 passed
----------
Running 2 test cases in batch mode (max_concurrency=10)
tests/mock/lazy_evaluation.yaml: 2/2 passed
tests/mock/stepflow-config.yml: 0/0 passed
tests/mock/basic.yaml: 3/3 passed
tests/mock/error_fail.yaml: 2/2 passed
tests/mock/error_retry.yaml: 2/2 passed
tests/mock/error_use_default.yaml: 2/2 passed
tests/mock/error_use_default_value.yaml: 2/2 passed
tests/mock/lazy_evaluation.yaml: 2/2 passed
tests/mock/stepflow-config.yml: Skipped (no test cases)

=== Test Summary ===
Files tested: 7
Files skipped: 1
Total test cases: 13
Passed: 13
Failed: 0

----- stderr -----
