stepflow-rs/crates/stepflow-cli/tests/commands/snapshots/test_cli__commands__test_test__test_with_custom_config.snap
---
source: crates/stepflow-cli/tests/commands/test_test.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - test
    - "--config=tests/builtins/stepflow-config.yml"
    - tests/builtins
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
----------
Running 2 test cases in batch mode (max_concurrency=10)
tests/builtins/blob_test.yaml: 2/2 passed
----------
Running 2 test cases in batch mode (max_concurrency=10)
tests/builtins/map_test.yaml: 2/2 passed
----------
Running 1 test cases in batch mode (max_concurrency=10)
tests/builtins/nested_eval.yaml: 1/1 passed
tests/builtins/stepflow-config.yml: 0/0 passed
tests/builtins/blob_test.yaml: 2/2 passed
tests/builtins/map_test.yaml: 2/2 passed
tests/builtins/nested_eval.yaml: 1/1 passed
tests/builtins/stepflow-config.yml: Skipped (no test cases)

=== Test Summary ===
Files tested: 4
Files skipped: 1
Total test cases: 5
Passed: 5
Failed: 0

----- stderr -----
